--- a/module2-solution/sytle.css
+++ b/module2-solution/sytle.css
@@ -1,5 +1,32 @@
 * {
-    margin: 0px;
-    padding: 0px;
-    font-family: cursive,Georgia, 'Times New Roman', Times, serif;
+	font-family: 'Lobster', cursive;
+	font-weight: 100;
+	font-size: 25px;
+	/*color: white;*/
+ }
+
+div {
+	width: 40%;
+	display: inline-block; 
+	padding: 20px;
+    background: blanchedalmond;
+    border: 5px solid grey;
+    margin: 10px;
+}
+
+h1 {
+    display: inline-block;
+    font-size: 29px;
+    background-color: coral;
+    border: 4px solid black;
+}
+
+
+@media only screen and (max-width: 1000px) {
+
+	div {
+		display: block;
+        width: 100%;
+        height: 100%;
+	}
 }
