--- a/site/estilo.css
+++ b/site/estilo.css
@@ -4,20 +4,14 @@
     font-family: cursive,Georgia, 'Times New Roman', Times, serif;
     align-items: center;
     text-align: center;
+    
 }
+
 
 h1 {
     background-color: aqua;
     flex: auto;
     text-align: center;
+    margin: 0 auto;
 }
 
-p {
-    text-align: center;
-}
-
-h2 {
-    width: 50px;
-    height: 60px;
-    text-align: center;
-}
