--- a/module2-solution/sytle.css
+++ b/module2-solution/sytle.css
@@ -42,7 +42,7 @@ h2 {
 @media only screen and (max-width: 500px) {
 
 	div {
-		display: block;
+		display: inline-block;
         width: 100%;
         height: 100%;
 	}
