--- a/module2-solution/sytle.css
+++ b/module2-solution/sytle.css
@@ -48,3 +48,21 @@ h2 {
 	}
 }
 
+@media (min-width: 768px) and (max-width: 991px){
+     div{
+      width: 46%;
+      float: left;
+    }
+    .caja3{
+     width: 100%;
+     float: left;
+   }
+  }
+  
+  
+  @media (max-width: 767px){
+    div{
+      width: 100%;
+      float: left;
+    }
+  }
