--- a/site/estilo.css
+++ b/site/estilo.css
@@ -2,7 +2,7 @@ body {
     font-size: 16px;
     color: #fff;
     background-color: #61122f;
-    font-family: Oxygen;
+    font-family: Oxygen, sans-serif;
 }
 
 /* HEADER */
