--- a/Module3-solution/Css.css
+++ b/Module3-solution/Css.css
@@ -8,7 +8,7 @@ body {
 h1 {
     font-size: 3rem;
     line-height: 2em;
-    
+    text-align: center;
 }
 p {
     margin-bottom: 1.6em;
@@ -18,7 +18,7 @@ img {
 }
 
 .container {
-    width: 75%;
+    width: 85%;
     max-width: 850px;
     margin: 0 auto;
 }
@@ -28,8 +28,6 @@ img {
     padding: 2rem 0;
     left: 0;
     top: 0;
-    width: 100%;
-    flex-wrap: wrap;
 }
 .header a {
     color: white;
@@ -68,12 +66,6 @@ img {
 
 }
 
-.position {
-    position: absolute;
-    top: 0;
-    right: 0;
- }
-
 .footer{
     background: #333;
     padding: 15px 0;
@@ -88,13 +80,12 @@ footer a {
     color: white;
 }
 .main{ 
-    margin: 20px auto;
+    margin: 10px auto;
     padding: 1rem 25px 25px 25px;
     border: 4px solid yellow;
     height: 30%;
     width: 50%;
     align-items: center;
     text-align: center;
-    position: relative;
 
 }
