--- a/Module3/Style.css
+++ b/Module3/Style.css
@@ -1,9 +1,11 @@
 body {
      background-color: #848ccf;
-     color: #5186ca;
+     color: #1b262c;
+    
 }
-
+/* los h y p*/
 h1 {
      text-transform: uppercase; 
      font-size: 60px;
 }
+/*final 1 de h y p*/
