--- a/Module3/Style.css
+++ b/Module3/Style.css
@@ -1,11 +1,13 @@
 body {
-     background-color: #848ccf;
-     color: #1b262c; 
+    background-color: #848ccf;
+    color: #1b262c;
 }
 
 h1 {
-     text-transform: uppercase; 
-     font-size: 60px;
-     
+    text-transform: uppercase;
+    font-size: 60px;
 }
 
+.ocultar {
+    display: none;
+}
